CREATE DATABASE MyBlog;
USE MyBlog;

# 建表
DROP TABLE IF EXISTS announcement;
DROP TABLE IF EXISTS likes;
DROP TABLE IF EXISTS photo;
DROP TABLE IF EXISTS comment;
DROP TABLE IF EXISTS blog;
DROP TABLE IF EXISTS user;


CREATE TABLE user
(
    id BIGINT AUTO_INCREMENT PRIMARY KEY COMMENT 'id',
    username VARCHAR(256) NOT NULL COMMENT '用户昵称',
    avatarUrl VARCHAR(1024) NULL COMMENT '用户头像',
    userPassword VARCHAR(512) NOT NULL COMMENT '密码',
    email VARCHAR(512) NOT NULL COMMENT '邮箱',
    userStatus INT DEFAULT 0 NOT NULL COMMENT '状态 0 - 正常',
    createTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL COMMENT '创建时间',
    updateTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
    isDelete TINYINT DEFAULT 0 NOT NULL COMMENT '是否删除',
    userRole INT DEFAULT 1 NOT NULL COMMENT '用户角色 0-默认用户 1-管理员'
) COMMENT '用户';

CREATE TABLE blog(
    id BIGINT AUTO_INCREMENT PRIMARY KEY COMMENT 'id',
    userId BIGINT COMMENT '博客作者',
    title VARCHAR(100) NULL COMMENT '博客标题',
    content VARCHAR(10000) NULL COMMENT '博客内容',
    createTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL COMMENT '创建时间',
    updateTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
    FOREIGN KEY (userId) REFERENCES user(id) ON DELETE SET NULL
) COMMENT '博客';

CREATE TABLE comment (
    id BIGINT NOT NULL AUTO_INCREMENT PRIMARY KEY COMMENT 'id',
    content VARCHAR(255) DEFAULT NULL COMMENT '评论内容',
    createTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL COMMENT '创建时间',
    userId BIGINT COMMENT '评论者',
    BlogId BIGINT COMMENT '被评论文章',
    FOREIGN KEY (userId) REFERENCES user(id) ON DELETE SET NULL,
    FOREIGN KEY (blogId) REFERENCES blog(id) ON DELETE CASCADE
) COMMENT '评论';

CREATE TABLE likes(
    userId BIGINT COMMENT '点赞者',
    blogId BIGINT COMMENT '被点赞文章',
    FOREIGN KEY (userId) REFERENCES user(id) ON DELETE CASCADE,
    FOREIGN KEY (blogId) REFERENCES blog(id) ON DELETE CASCADE,
    PRIMARY KEY(userId, blogId)
) COMMENT '点赞';

CREATE TABLE announcement(
    id BIGINT NOT NULL AUTO_INCREMENT PRIMARY KEY COMMENT 'id',
    userId BIGINT COMMENT '发布公告者',
    content VARCHAR(8000) NULL COMMENT '公告内容',
    createTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL COMMENT '创建时间',
    updateTime DATETIME DEFAULT CURRENT_TIMESTAMP NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
    FOREIGN KEY (userId) REFERENCES user(id) ON DELETE SET NULL
) COMMENT '公告';

CREATE TABLE IF NOT EXISTS photo (
    id BIGINT AUTO_INCREMENT PRIMARY KEY,
    photoUrl VARCHAR(255) NOT NULL,
    userId BIGINT,
    FOREIGN KEY (userId) REFERENCES user(id) ON DELETE CASCADE
);
